--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="containerClp">
       <div class="logoClp">
         <a href="index.html"><img src="images/icon.png" alt="" />
-          <span>New Tab Quick Pdf Converter</span>
+          <span>PDF Converter New Tab</span>
         </a>
       </div>
     </div>
